--- a/Projects/Core/Core.vcxproj.filters
+++ b/Projects/Core/Core.vcxproj.filters
@@ -57,12 +57,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stdafx.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="targetver.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\include\Core\Allocator\DoubleBufferAllocator.h">
       <Filter>ヘッダー ファイル\Allocator</Filter>
     </ClInclude>
@@ -126,11 +120,14 @@
     <ClInclude Include="..\..\include\Core\Task\Task.h">
       <Filter>ヘッダー ファイル\Task</Filter>
     </ClInclude>
+    <ClInclude Include="Config.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Core\Graphics\Shader.h">
+      <Filter>ヘッダー ファイル\Graphics</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="stdafx.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\src\Core\Allocator\DoubleBufferAllocator.cpp">
       <Filter>ソース ファイル\Allocator</Filter>
     </ClCompile>
@@ -160,6 +157,9 @@
     </ClCompile>
     <ClCompile Include="..\..\src\Core\Task\Task.cpp">
       <Filter>ソース ファイル\Thread</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Core\Graphics\Shader.cpp">
+      <Filter>ソース ファイル\Graphics</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
