--- a/Projects/Main/Main.vcxproj.filters
+++ b/Projects/Main/Main.vcxproj.filters
@@ -25,6 +25,9 @@
     <Filter Include="ソース ファイル\Editor\Console">
       <UniqueIdentifier>{5c635c85-be9c-4d1c-abd2-ac43825878b9}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Shader">
+      <UniqueIdentifier>{4dc5d607-795e-467f-b43d-9eae5a3e4a0d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\main.cpp">
@@ -38,5 +41,13 @@
     <ClInclude Include="..\..\include\Editor\Console\Console.h">
       <Filter>ヘッダー ファイル\Editor\Console</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="Default_VertexShader.hlsl">
+      <Filter>ソース ファイル\Shader</Filter>
+    </FxCompile>
+    <FxCompile Include="Default_PixelShader.hlsl">
+      <Filter>ソース ファイル\Shader</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
