--- a/Projects/Platform/Platform.vcxproj
+++ b/Projects/Platform/Platform.vcxproj
@@ -86,13 +86,14 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>C:\Users\MIYAM\Desktop\MyEditor_Project\include\Platform;C:\Users\MIYAM\Desktop\MyEditor_Project\Projects\Platform;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PrecompiledHeaderFile />
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -162,6 +163,7 @@
     <ClInclude Include="..\..\include\Platform.h" />
     <ClInclude Include="..\..\include\Platform\Base\Assert.h" />
     <ClInclude Include="..\..\include\Platform\Base\BitFlags.h" />
+    <ClInclude Include="..\..\include\Platform\Base\IGraphics.h" />
     <ClInclude Include="..\..\include\Platform\Base\INetwork.h" />
     <ClInclude Include="..\..\include\Platform\Base\IRenderer.h" />
     <ClInclude Include="..\..\include\Platform\Base\ISystem.h" />
@@ -179,8 +181,6 @@
     <ClInclude Include="..\..\include\Platform\IO\PathHelper.h" />
     <ClInclude Include="..\..\include\Platform\IO\Stream.h" />
     <ClInclude Include="..\..\include\Platform\Module\Module.h" />
-    <ClInclude Include="stdafx.h" />
-    <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\Platform\Base\Logger.cpp" />
@@ -189,12 +189,6 @@
     <ClCompile Include="..\..\src\Platform\IO\FileStream.cpp" />
     <ClCompile Include="..\..\src\Platform\IO\Path.cpp" />
     <ClCompile Include="..\..\src\Platform\IO\PathHelper.cpp" />
-    <ClCompile Include="stdafx.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
-    </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
