--- a/Projects/DirectX11/DirectX11.vcxproj
+++ b/Projects/DirectX11/DirectX11.vcxproj
@@ -91,7 +91,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
@@ -170,7 +170,6 @@ xcopy /y /d "$(OutDir)$(TargetName).lib" "..\..\lib\$(IntDir)"</Command>
     <ClInclude Include="..\..\include\Thirdparty\Graphics\DirectX11\ConstantBuffer.h" />
     <ClInclude Include="..\..\include\Thirdparty\Graphics\DirectX11\DirectX11.h" />
     <ClInclude Include="..\..\include\Thirdparty\Graphics\DirectX11\Graphics.h" />
-    <ClInclude Include="..\..\include\Thirdparty\Graphics\DirectX11\IBuffer.h" />
     <ClInclude Include="..\..\include\Thirdparty\Graphics\DirectX11\IndexBuffer.h" />
     <ClInclude Include="..\..\include\Thirdparty\Graphics\DirectX11\Renderer.h" />
     <ClInclude Include="..\..\include\Thirdparty\Graphics\DirectX11\Shader.h" />
@@ -181,19 +180,13 @@ xcopy /y /d "$(OutDir)$(TargetName).lib" "..\..\lib\$(IntDir)"</Command>
   <ItemGroup>
     <ClCompile Include="..\..\src\Thirdparty\Graphics\DirectX11\ConstantBuffer.cpp" />
     <ClCompile Include="..\..\src\Thirdparty\Graphics\DirectX11\Graphics.cpp" />
-    <ClCompile Include="..\..\src\Thirdparty\Graphics\DirectX11\IBuffer.cpp" />
     <ClCompile Include="..\..\src\Thirdparty\Graphics\DirectX11\IndexBuffer.cpp" />
     <ClCompile Include="..\..\src\Thirdparty\Graphics\DirectX11\Renderer.cpp" />
     <ClCompile Include="..\..\src\Thirdparty\Graphics\DirectX11\Shader.cpp" />
     <ClCompile Include="..\..\src\Thirdparty\Graphics\DirectX11\Texture.cpp" />
     <ClCompile Include="..\..\src\Thirdparty\Graphics\DirectX11\VertexBuffer.cpp" />
     <ClCompile Include="dllmain.cpp" />
-    <ClCompile Include="stdafx.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
-    </ClCompile>
+    <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
