--- a/Projects/Main/Main.vcxproj.filters
+++ b/Projects/Main/Main.vcxproj.filters
@@ -25,8 +25,8 @@
     <Filter Include="ソース ファイル\Editor\Console">
       <UniqueIdentifier>{5c635c85-be9c-4d1c-abd2-ac43825878b9}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ソース ファイル\Shader">
-      <UniqueIdentifier>{4dc5d607-795e-467f-b43d-9eae5a3e4a0d}</UniqueIdentifier>
+    <Filter Include="シェーダファイル">
+      <UniqueIdentifier>{326ae37a-4524-4d0c-b89e-43f54b93a487}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -43,11 +43,14 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="Default_VertexShader.hlsl">
-      <Filter>ソース ファイル\Shader</Filter>
+    <FxCompile Include="TestShader.hlsl">
+      <Filter>シェーダファイル</Filter>
     </FxCompile>
     <FxCompile Include="Default_PixelShader.hlsl">
-      <Filter>ソース ファイル\Shader</Filter>
+      <Filter>シェーダファイル</Filter>
+    </FxCompile>
+    <FxCompile Include="Default_VertexShader.hlsl">
+      <Filter>シェーダファイル</Filter>
     </FxCompile>
   </ItemGroup>
 </Project>
