--- a/Projects/Platform/Platform.vcxproj
+++ b/Projects/Platform/Platform.vcxproj
@@ -163,13 +163,16 @@
     <ClInclude Include="..\..\include\Platform.h" />
     <ClInclude Include="..\..\include\Platform\Base\Assert.h" />
     <ClInclude Include="..\..\include\Platform\Base\BitFlags.h" />
+    <ClInclude Include="..\..\include\Platform\Base\IBuffer.h" />
     <ClInclude Include="..\..\include\Platform\Base\IGraphics.h" />
     <ClInclude Include="..\..\include\Platform\Base\INetwork.h" />
     <ClInclude Include="..\..\include\Platform\Base\IRenderer.h" />
+    <ClInclude Include="..\..\include\Platform\Base\IResource.h" />
     <ClInclude Include="..\..\include\Platform\Base\IShader.h" />
     <ClInclude Include="..\..\include\Platform\Base\ISystem.h" />
     <ClInclude Include="..\..\include\Platform\Base\IWindow.h" />
     <ClInclude Include="..\..\include\Platform\Base\Logger.h" />
+    <ClInclude Include="..\..\include\Platform\Base\RefObject.h" />
     <ClInclude Include="..\..\include\Platform\Base\Result.h" />
     <ClInclude Include="..\..\include\Platform\Base\String.h" />
     <ClInclude Include="..\..\include\Platform\Base\StringHelper.h" />
@@ -184,7 +187,6 @@
     <ClInclude Include="..\..\include\Platform\Module\Module.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\include\Platform\Base\IGraphics.cpp" />
     <ClCompile Include="..\..\src\Platform\Base\Logger.cpp" />
     <ClCompile Include="..\..\src\Platform\Base\String.cpp" />
     <ClCompile Include="..\..\src\Platform\IO\DllLoader.cpp" />
