Update : Platform階層の変更 IN OUTの可読性を向上

--- a/Projects/Platform/Platform.vcxproj
+++ b/Projects/Platform/Platform.vcxproj
@@ -188,6 +188,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\Platform\Base\Logger.cpp" />
+    <ClCompile Include="..\..\src\Platform\Base\RefObject.cpp" />
     <ClCompile Include="..\..\src\Platform\Base\String.cpp" />
     <ClCompile Include="..\..\src\Platform\IO\DllLoader.cpp" />
     <ClCompile Include="..\..\src\Platform\IO\FileStream.cpp" />
