--- a/Projects/Platform/Platform.vcxproj.filters
+++ b/Projects/Platform/Platform.vcxproj.filters
@@ -34,14 +34,14 @@
     <Filter Include="ヘッダー ファイル\Module">
       <UniqueIdentifier>{2eff81ed-1d3e-4cf6-abf4-2b76c53a2446}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ヘッダー ファイル\Base\Interface\Graphics">
-      <UniqueIdentifier>{ffea8625-a951-4788-9131-4e08222846ed}</UniqueIdentifier>
-    </Filter>
     <Filter Include="ヘッダー ファイル\Base\Interface\Resource">
       <UniqueIdentifier>{b9054717-8b5b-4ec1-aab2-3d3470b4545d}</UniqueIdentifier>
     </Filter>
     <Filter Include="ヘッダー ファイル\Base\Types">
       <UniqueIdentifier>{4c8eeede-0545-4f05-8ccb-5c51929a81a7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\Base\Interface\Graphics">
+      <UniqueIdentifier>{66efd3a1-e8f3-44e5-9686-8e1f4f626efb}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -63,9 +63,6 @@
     <ClInclude Include="..\..\include\Platform\Base\ISystem.h">
       <Filter>ヘッダー ファイル\Base\Interface</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\include\Platform\Base\INetwork.h">
-      <Filter>ヘッダー ファイル\Base\Interface</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\include\Platform\IO\DllLoader.h">
       <Filter>ヘッダー ファイル\IO</Filter>
     </ClInclude>
@@ -83,12 +80,6 @@
     </ClInclude>
     <ClInclude Include="..\..\include\Platform\Module\Module.h">
       <Filter>ヘッダー ファイル\Module</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\include\Platform\Base\IGraphics.h">
-      <Filter>ヘッダー ファイル\Base\Interface\Graphics</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\include\Platform\Base\IRenderer.h">
-      <Filter>ヘッダー ファイル\Base\Interface\Graphics</Filter>
     </ClInclude>
     <ClInclude Include="..\..\include\Platform\Base\IShader.h">
       <Filter>ヘッダー ファイル\Base\Interface\Resource</Filter>
@@ -120,6 +111,15 @@
     <ClInclude Include="..\..\include\Platform\Base\IBuffer.h">
       <Filter>ヘッダー ファイル\Base\Interface\Resource</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\Platform\Base\IGraphics.h">
+      <Filter>ヘッダー ファイル\Base\Interface\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Platform\Base\IRenderer.h">
+      <Filter>ヘッダー ファイル\Base\Interface\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Platform\Base\INetwork.h">
+      <Filter>ヘッダー ファイル\Base\Interface</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\Platform\Base\Logger.cpp">
@@ -139,6 +139,9 @@
     </ClCompile>
     <ClCompile Include="..\..\src\Platform\IO\PathHelper.cpp">
       <Filter>ソース ファイル\IO</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Platform\Base\RefObject.cpp">
+      <Filter>ソース ファイル\Base</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
